fix: labelling error

--- a/scripts/video2frame.ipynb
+++ b/scripts/video2frame.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "adjustable-inside",
+   "execution_count": 1,
+   "id": "working-series",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "smaller-wisconsin",
+   "execution_count": 2,
+   "id": "lightweight-basin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "hydraulic-infrared",
+   "execution_count": 3,
+   "id": "weird-mineral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,24 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "municipal-celebrity",
+   "execution_count": 4,
+   "id": "invalid-editor",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_mapping = {'anger': 0, \n",
-    "                  'disgust': 1, \n",
+    "labels_mapping = {'anger': 6, \n",
+    "                  'disgust': 5, \n",
     "                  'fear': 2, \n",
-    "                  'joy': 3, \n",
-    "                  'neutral': 4, \n",
-    "                  'sadness': 5, \n",
-    "                  'surprise': 6}"
+    "                  'joy': 4, \n",
+    "                  'neutral': 0, \n",
+    "                  'sadness': 3, \n",
+    "                  'surprise': 1}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "industrial-shame",
+   "execution_count": 5,
+   "id": "antique-paper",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        " 'EndTime': '00:16:21,731'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "emerging-background",
+   "execution_count": 6,
+   "id": "usual-liberty",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "7523"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "adjustable-effects",
+   "execution_count": 7,
+   "id": "retained-merit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
     "\n",
     "        ret, frame = vid_capture.read()\n",
     "        output_path = output_folder + '/' + vid_name + '.jpg'\n",
-    "        cv2.imwrite(output_path, frame)\n",
+    "#         cv2.imwrite(output_path, frame)\n",
     "\n",
     "        image_id = vid_name + '.jpg'\n",
     "        label = labels_mapping[emotion]\n",
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "incorrect-camcorder",
+   "execution_count": null,
+   "id": "palestinian-financing",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7523/7523 [00:51<00:00, 146.30it/s]\n"
+      " 55%|█████▌    | 4145/7523 [01:50<01:35, 35.40it/s]"
      ]
     }
    ],
@@ -166,55 +166,39 @@
     "video2frame(set_name='train', \n",
     "            source_video_folder=train, \n",
     "            output_folder='/home/kvu/erc/single-frame-dataset/train', \n",
-    "            output_csv_path='/home/kvu/erc/single-frame-dataset/train.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "annoying-guess",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 860/860 [00:06<00:00, 130.76it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "video2frame(set_name='dev', \n",
-    "            source_video_folder=dev, \n",
-    "            output_folder='/home/kvu/erc/single-frame-dataset/dev', \n",
-    "            output_csv_path='/home/kvu/erc/single-frame-dataset/dev.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "proved-eugene",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1983/1983 [00:13<00:00, 148.90it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "video2frame(set_name='test', \n",
-    "            source_video_folder=test, \n",
-    "            output_folder='/home/kvu/erc/single-frame-dataset/test', \n",
-    "            output_csv_path='/home/kvu/erc/single-frame-dataset/test.csv')"
+    "            output_csv_path='/home/kvu/erc/Datasets/MELD-single-frame/train.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "australian-forum",
+   "id": "greek-union",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video2frame(set_name='dev', \n",
+    "            source_video_folder=dev, \n",
+    "            output_folder='/home/kvu/erc/single-frame-dataset/dev', \n",
+    "            output_csv_path='/home/kvu/erc/Datasets/MELD-single-frame/dev.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "obvious-permission",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video2frame(set_name='test', \n",
+    "            source_video_folder=test, \n",
+    "            output_folder='/home/kvu/erc/single-frame-dataset/test', \n",
+    "            output_csv_path='/home/kvu/erc/Datasets/MELD-single-frame/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "corporate-loading",
    "metadata": {},
    "outputs": [],
    "source": []
