--- a/Datasets/scripts/OLD/MELD/5.extract-face-videos.ipynb
+++ b/Datasets/scripts/OLD/MELD/5.extract-face-videos.ipynb
@@ -1,26 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
-   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -72,32 +50,36 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d56d8fd239ff49e58239a63cc6211451",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d56d8fd239ff49e58239a63cc6211451"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9989.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1940f129f78e4438b2dcfb65fa1c018a",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1940f129f78e4438b2dcfb65fa1c018a"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9989.0), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "too many threads/slices (15), reducing to 14\n",
       "too many threads/slices (15), reducing to 14\n",
@@ -155,9 +137,9 @@
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -266,5 +248,26 @@
     "        container.close()"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
+   "language": "python",
+   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
