--- a/Datasets/scripts/face-prototype.ipynb
+++ b/Datasets/scripts/face-prototype.ipynb
@@ -1,26 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
-   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -110,20 +88,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ffa321191e144c1dbb2d2eb88ab05c8c",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ffa321191e144c1dbb2d2eb88ab05c8c"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=8.0), HTML(value='')))"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\n",
       "ERROR:root:Internal Python error in the inspect module.\n",
@@ -317,9 +297,9 @@
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -384,5 +364,26 @@
     "                   for batch in tqdm(batched))\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
+   "language": "python",
+   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
