--- a/scripts/EDA_audio.ipynb
+++ b/scripts/EDA_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "southeast-excuse",
+   "id": "sharp-membrane",
    "metadata": {},
    "source": [
     "## Load data"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "static-homework",
+   "execution_count": 15,
+   "id": "broke-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import pandas as pd\n",
     "import json\n",
     "import os\n",
+    "import csv\n",
     "from tqdm import tqdm\n",
     "\n",
     "import warnings\n",
@@ -28,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "greatest-intention",
+   "id": "persistent-warning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "medieval-rochester",
+   "id": "apparent-percentage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "crazy-insight",
+   "id": "cross-velvet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "checked-column",
+   "id": "severe-brick",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "connected-generation",
+   "id": "social-cosmetic",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "determined-housing",
+   "id": "documented-vinyl",
    "metadata": {},
    "source": [
     "## EDA"
@@ -194,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "guided-logic",
+   "id": "frequent-interface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "altered-simple",
+   "id": "grand-brooks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,52 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "several-prayer",
+   "execution_count": 11,
+   "id": "characteristic-toilet",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b215f36da2946c3ab506c08f659265c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/17 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b97def30cefd4f0089c30e94bd28dcbb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00dea7daf51c4c21ae03d36a87d50bea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -7769,7 +7728,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7779,9 +7738,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "invalid-girlfriend",
+   "metadata": {},
+   "source": [
+    "## Get CSVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "adult-pulse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes_filter = ['happy', 'neutral', 'angry']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "vanilla-competition",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def json2csv(phase, audio_dir, csv_path):\n",
+    "    row_list = []\n",
+    "    row_list.append(['audio_id', 'label'])\n",
+    "    labels = dataset_json[phase]\n",
+    "    for audio_name in tqdm(os.listdir(audio_dir)):\n",
+    "        audio_id = audio_name[:-4]\n",
+    "        label = labels[audio_id]\n",
+    "        if label in classes_filter:\n",
+    "            row_list.append([audio_id, label])\n",
+    "            \n",
+    "    with open(csv_path, 'w', newline='') as f:\n",
+    "        writer = csv.writer(f, delimiter=',')\n",
+    "        writer.writerows(row_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "interesting-model",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 773/773 [00:00<00:00, 414232.40it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "json2csv('train', train_dir, '/home/kvu/erc/data/AFEW/raw-audios/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "essential-knock",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 383/383 [00:00<00:00, 940526.01it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "json2csv('val', val_dir, '/home/kvu/erc/data/AFEW/raw-audios/val.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applicable-unknown",
+   "id": "rubber-pepper",
    "metadata": {},
    "outputs": [],
    "source": []
